<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="org.cyntho.fh.kotlin.kartoffelpuffer.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="org.cyntho.fh.kotlin.kartoffelpuffer.ui.settings.SettingsFragment"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings" />

    <fragment
            android:id="@+id/navigation_reservations"
            android:name="org.cyntho.fh.kotlin.kartoffelpuffer.ui.reservations.ReservationsFragment"
            android:label="@string/title_reservations"
            tools:layout="@layout/fragment_reservations" />

    <fragment
            android:id="@+id/navigation_setup"
            android:name="org.cyntho.fh.kotlin.kartoffelpuffer.ui.setup.SetupFragment"
            android:label="@string/title_setup"
            tools:layout="@layout/fragment_setup"
            />

    <fragment
            android:id="@+id/navigation_layoutEditor"
            android:name="org.cyntho.fh.kotlin.kartoffelpuffer.ui.editor.LayoutEditorFragment"
            android:label="Editor"
            tools:layout="@layout/fragment_layout_editor"
            />


</navigation>