<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.settings.SettingsFragment">


    <Button
            android:text="@string/btn_imprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_imprint"
            app:layout_constraintTop_toBottomOf="@+id/txSettingsTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.923"
            android:textColor="@color/app_background_main"
            tools:ignore="TextContrastCheck"/>

    <TextView
            android:id="@+id/txSettingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_settings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="22sp"
            app:layout_constraintVertical_bias="0.182"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="center"/>

    <Switch
            android:text="@string/lbl_DarkMode"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_DarkMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="224dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:textSize="18sp"
            android:minHeight="48dp"/>

    <Switch
            android:text="@string/lbl_Notifications"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/switch_Notifications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/switch_DarkMode"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:minHeight="48dp"/>

    <TextView
            android:text="@string/lbl_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:minHeight="32dp"
            android:textSize="18sp"
            android:id="@+id/lbl_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_Notifications"
            android:layout_marginTop="15dp"/>

    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType=""
            android:ems="10"
            android:id="@+id/txt_username"
            app:layout_constraintTop_toBottomOf="@+id/lbl_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
