<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.setup.SetupFragment">


    <Button
            android:id="@+id/btn_setup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSetup"
            app:layout_constraintVertical_bias="0.857"
            tools:ignore="TextContrastCheck" />

    <TextView
            android:id="@+id/txtSetup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_setup"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="22sp"
            app:layout_constraintVertical_bias="0.182"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textAlignment="center"/>

    <TextView
            android:layout_width="191dp"
            android:layout_height="212dp"
            android:id="@+id/txtSetupWelcome"
            android:text="@string/txtWelcome"
            app:layout_constraintTop_toBottomOf="@+id/txtSetup"
            app:layout_constraintBottom_toTopOf="@+id/btn_setup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.067"/>

    <TextView
            android:text="@string/lbl_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lbl_usernameSetup"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/txtSetupWelcome"
            android:layout_marginTop="120dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_setup"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:labelFor="@id/editTextSetupUsername"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/editTextSetupUsername"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/lbl_usernameSetup"
            app:layout_constraintBottom_toTopOf="@+id/btn_setup"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="48dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
